; ModuleID = '/home/carl/AnghaBench/timescaledb/src/bgw/extr_job_stat.c_calculate_next_start_on_crash.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/bgw/extr_job_stat.c_calculate_next_start_on_crash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MIN_WAIT_AFTER_CRASH_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32*)* @calculate_next_start_on_crash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @calculate_next_start_on_crash(i32 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %9 = call i64 (...) @ts_timer_get_current_timestamp()
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @calculate_next_start_on_failure(i64 %10, i32 %11, i32* %12)
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i32, i32* @MIN_WAIT_AFTER_CRASH_MS, align 4
  %16 = call i64 @TimestampTzPlusMilliseconds(i64 %14, i32 %15)
  store i64 %16, i64* %8, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* %7, align 8
  %19 = icmp sgt i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %2
  %21 = load i64, i64* %8, align 8
  store i64 %21, i64* %3, align 8
  br label %24

22:                                               ; preds = %2
  %23 = load i64, i64* %7, align 8
  store i64 %23, i64* %3, align 8
  br label %24

24:                                               ; preds = %22, %20
  %25 = load i64, i64* %3, align 8
  ret i64 %25
}

declare dso_local i64 @ts_timer_get_current_timestamp(...) #1

declare dso_local i64 @calculate_next_start_on_failure(i64, i32, i32*) #1

declare dso_local i64 @TimestampTzPlusMilliseconds(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
